--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "*": ["types/*"]
+            "*": ["types/*"],
+            "@sinonjs/fake-timers": ["node_modules/@types/sinonjs__fake-timers"]
         },
         "incremental": true,
         "module": "commonjs",
