tests: Small cleanup (#1659)
## Problem
There were a few minor issues with the tests, notably a bunch of unhandled rejected promises.

## Solution
* Remove assertUtils and use assert.rejects/assert.throws instead (this fixed a couple of the unhandled promises)
* Properly dispose of the template/CodeLens registry in global test setup (this fixed the rest)
* Add 'fake-timers' types to tsconfig.json so types actually show up for FakeTimers
* Launch unit tests with extensions disabled (nice little speed-up for locally run tests)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,7 @@
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "args": [
+                "--disable-extensions",
                 "--extensionDevelopmentPath=${workspaceFolder}",
                 "--extensionTestsPath=${workspaceFolder}/dist/src/test/index",
                 "${workspaceRoot}/dist/src/testFixtures/workspaceFolder"
@@ -68,6 +69,7 @@
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "args": [
+                "--disable-extensions",
                 "--extensionDevelopmentPath=${workspaceFolder}",
                 "--extensionTestsPath=${workspaceFolder}/dist/src/test/index.js",
                 "${workspaceRoot}/dist/src/testFixtures/workspaceFolder"
