CDK: hide panel on Cloud9
ref e132be025e904d787f3bff26448be4add877c136 #1632

--- a/package.json
+++ b/package.json
@@ -552,7 +552,7 @@
                 {
                     "id": "aws.cdk.explorer",
                     "name": "%AWS.cdk.explorerTitle%",
-                    "when": "config.aws.cdk.explorer.enabled"
+                    "when": "config.aws.cdk.explorer.enabled && !isCloud9"
                 }
             ]
         },
