--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
-    "isolatedModules": true,
-    "esModuleInterop": true,
     "compilerOptions": {
+        "esModuleInterop": true,
         "baseUrl": ".",
         "paths": {
             "*": ["types/*"],
-            "@sinonjs/fake-timers": ["node_modules/@types/sinonjs__fake-timers"]
+            "@sinonjs/fake-timers": ["node_modules/@types/sinonjs__fake-timers"],
+            // Remove logform when https://github.com/winstonjs/logform/pull/117 is released
+            "logform": ["./logform-external.js"]
         },
         "incremental": true,
         "module": "commonjs",
@@ -25,5 +26,5 @@
         // "noUnusedParameters": true,  /* Report errors on unused parameters. */
         "skipLibCheck": true /* Skip type checking of *.d.ts files */
     },
-    "exclude": ["node_modules", ".vscode-test", "src/testFixtures"]
+    "exclude": [".vscode-test", "src/testFixtures"]
 }
