--- a/package.json
+++ b/package.json
@@ -1500,6 +1500,7 @@
         ]
     },
     "scripts": {
+        "gulpgulp": "npm run buildScripts && gulp translations-export",
         "vscode:prepublish": "npm run clean && npm run lint && webpack --mode production && npm run buildScripts",
         "bundleDeps": "node ./build-scripts/bundleDeps.js",
         "clean": "node ./build-scripts/clean.js dist",
@@ -1511,7 +1512,7 @@
         "copyDistFiles": "ts-node ./build-scripts/copyDistFiles.ts",
         "buildScripts": "npm run bundleDeps && npm run copyExtensionMain && npm run copyDistFiles && npm run copyNonCodeFiles && npm run generateNonCodeFiles && npm run buildVue",
         "buildVue": "webpack --config-name vueLoader",
-        "compile": "webpack --mode development && npm run buildScripts && npm run generateNlsPackage",
+        "compile": "webpack --mode development && npm run buildScripts",
         "recompile": "npm run clean && npm run compile",
         "watch": "npm run buildScripts && tsc -watch -p ./",
         "postinstall": "ts-node ./build-scripts/generateServiceClient.ts && npm run generateTelemetry && npm run generateConfigurationAttributes",
@@ -1536,6 +1537,7 @@
         "@types/cross-spawn": "^6.0.0",
         "@types/fs-extra": "^8.0.1",
         "@types/glob": "^7.1.1",
+        "@types/gulp": "^4.0.8",
         "@types/js-yaml": "^3.12.0",
         "@types/lodash": "^4.14.136",
         "@types/marked": "^0.6.5",
@@ -1554,14 +1556,20 @@
         "@typescript-eslint/eslint-plugin": "^2.27.0",
         "@typescript-eslint/eslint-plugin-tslint": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
+        "ast-types": "^0.9.14",
         "circular-dependency-plugin": "^5.2.0",
         "decache": "^4.4.0",
+        "esbuild": "^0.11.15",
         "esbuild-loader": "2.10.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-header": "^3.0.0",
         "eslint-plugin-no-null": "^1.0.2",
         "glob": "^7.1.4",
+        "gulp": "^4.0.2",
+        "gulp-esbuild": "^0.7.2",
+        "gulp-filter": "^6.0.0",
+        "gulp-typescript": "^6.0.0-alpha.1",
         "husky": "^2.3.0",
         "istanbul": "^0.4.5",
         "json-schema-to-typescript": "^8.2.0",
@@ -1572,6 +1580,7 @@
         "prettier": "^2.1.2",
         "pretty-quick": "^3.1.0",
         "readline-sync": "^1.4.9",
+        "recast": "^0.11.23",
         "remap-istanbul": "^0.12.0",
         "sinon": "^7.4.2",
         "source-map-support": "^0.5.19",
