Move from KtLint to DeteKt (#2579)
- Add DeteKt for static code analysis
- Port KtLint rules to work with DeteKt instead of KtLint
- Uses its own script separate from kotlin-conventions. This is because I could not get it to work if it used toolkit-kotlin-conventions it failed silently for some reason, even with --debug I couldn't find any relevant logs.

--- a/codecov.yml
+++ b/codecov.yml
@@ -36,7 +36,7 @@ coverage:
 comment: false
 
 ignore:
-  - "ktlint-rules/**/*"
+  - "detekt-rules/**/*"
   - "resources/**/*"
   - "sdk-codegen/**/*"
   - "jetbrains-rider/**/*.Generated.kt"
