--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ ideProfileName=2020.2
 kotlinVersion=1.4.21
 awsSdkVersion=2.16.36
 coroutinesVersion=1.3.3
-ktlintVersion=0.39.0
+detektVersion=1.16.0
 jacksonVersion=2.11.1
 telemetryVersion=0.0.94
 commonsMarkVersion=0.17.1
