SAM hints: fix "aws.sam.enableCodeLenses" default
Problem:
aws.sam.enableCodeLenses was defined with default "true" (string)
instead of true (boolean), so readSetting() returned nonsense which
caused the initial invocation of the "Toggle" command to do nothing.

Solution:
- Fix the aws.sam.enableCodeLenses defined in package.json
- Simplify the code a bit.

--- a/package.json
+++ b/package.json
@@ -165,7 +165,7 @@
                 "aws.sam.enableCodeLenses": {
                     "type": "boolean",
                     "description": "%AWS.configuration.enableCodeLenses%",
-                    "default": "true"
+                    "default": true
                 }
             }
         },
