--- a/detekt-rules/detekt.yml
+++ b/detekt-rules/detekt.yml
@@ -38,34 +38,139 @@ coroutines:
   SuspendFunWithFlowReturnType:
     active: true
 
+# unfortunately, does not respect .editorconfig in the project folder
+# also needs to be manually updated if there are new rules upstream
 formatting:
   active: true
   android: false
   autoCorrect: true
+  AnnotationOnSeparateLine:
+    active: false
+    autoCorrect: true
   AnnotationSpacing:
+    active: false
+    autoCorrect: true
+  ArgumentListWrapping:
+    active: false
+    autoCorrect: true
+    indentSize: 4
+    maxLineLength: 160
+  ChainWrapping:
     active: true
+    autoCorrect: true
+  CommentSpacing:
+    active: true
+    autoCorrect: true
   EnumEntryNameCase:
+    active: false
+    autoCorrect: true
+  Filename:
     active: true
+  FinalNewline:
+    active: true
+    autoCorrect: true
+    insertFinalNewLine: true
   ImportOrdering:
     active: true
+    autoCorrect: true
   Indentation:
     active: true
+    autoCorrect: true
+    indentSize: 4
+    continuationIndentSize: 4
     excludes: [ '**/TelemetryDefinitions.kt' ]
   MaximumLineLength:
-    active: false
+    active: true
+    maxLineLength: 160
+    ignoreBackTickedIdentifier: false
+  ModifierOrdering:
+    active: true
+    autoCorrect: true
+  MultiLineIfElse:
+    active: true
+    autoCorrect: true
+  NoBlankLineBeforeRbrace:
+    active: true
+    autoCorrect: true
+  NoConsecutiveBlankLines:
+    active: true
+    autoCorrect: true
+  NoEmptyClassBody:
+    active: true
+    autoCorrect: true
   NoEmptyFirstLineInMethodBlock:
     active: true
+    autoCorrect: true
+  NoLineBreakAfterElse:
+    active: true
+    autoCorrect: true
+  NoLineBreakBeforeAssignment:
+    active: true
+    autoCorrect: true
+  NoMultipleSpaces:
+    active: true
+    autoCorrect: true
+  NoSemicolons:
+    active: true
+    autoCorrect: true
+  NoTrailingSpaces:
+    active: true
+    autoCorrect: true
+  NoUnitReturn:
+    active: true
+    autoCorrect: true
+  NoUnusedImports:
+    active: true
+    autoCorrect: true
+  NoWildcardImports:
+    active: true
+  PackageName:
+    active: true
+    autoCorrect: true
   ParameterListWrapping:
     active: false
   SpacingAroundAngleBrackets:
+    active: false
+    autoCorrect: true
+  SpacingAroundColon:
     active: true
+    autoCorrect: true
+  SpacingAroundComma:
+    active: true
+    autoCorrect: true
+  SpacingAroundCurly:
+    active: true
+    autoCorrect: true
+  SpacingAroundDot:
+    active: true
+    autoCorrect: true
   SpacingAroundDoubleColon:
+    active: false
+    autoCorrect: true
+  SpacingAroundKeyword:
     active: true
+    autoCorrect: true
+  SpacingAroundOperators:
+    active: true
+    autoCorrect: true
+  SpacingAroundParens:
+    active: true
+    autoCorrect: true
+  SpacingAroundRangeOperator:
+    active: true
+    autoCorrect: true
   SpacingAroundUnaryOperator:
     active: true
+  SpacingBetweenDeclarationsWithAnnotations:
+    active: false
+    autoCorrect: true
   SpacingBetweenDeclarationsWithComments:
     active: true
+    autoCorrect: true
     excludes: [ '**/icons/**' ]
+  StringTemplate:
+    active: true
+    autoCorrect: true
 
 naming:
   active: true
