--- a/package.json
+++ b/package.json
@@ -1594,7 +1594,6 @@
         "aws-sdk": "^2.882.0",
         "aws-ssm-document-language-service": "^1.0.0",
         "bytes": "^3.1.0",
-        "cloudformation-schema-js-yaml": "^1.0.1",
         "cross-spawn": "^7.0.3",
         "fs-extra": "^9.0.1",
         "handlebars": "^4.7.7",
@@ -1620,7 +1619,8 @@
         "winston": "^3.2.1",
         "winston-transport": "^4.3.0",
         "xml2js": "^0.4.19",
-        "yaml": "^1.9.2"
+        "yaml": "^1.9.2",
+        "yaml-cfn": "^0.3.0"
     },
     "prettier": {
         "printWidth": 120,
