--- a/package.json
+++ b/package.json
@@ -1510,8 +1510,7 @@
         "copyNonCodeFiles": "node ./build-scripts/copyNonCodeFiles.js",
         "copyExtensionMain": "node ./build-scripts/copyExtensionMain.js",
         "copyDistFiles": "ts-node ./build-scripts/copyDistFiles.ts",
-        "buildScripts": "npm run bundleDeps && npm run copyExtensionMain && npm run copyDistFiles && npm run copyNonCodeFiles && npm run generateNonCodeFiles && npm run buildVue",
-        "buildVue": "webpack --config-name vueLoader",
+        "buildScripts": "npm run bundleDeps && npm run copyExtensionMain && npm run copyDistFiles && npm run copyNonCodeFiles && npm run generateNonCodeFiles",
         "compile": "webpack --mode development && npm run buildScripts",
         "recompile": "npm run clean && npm run compile",
         "watch": "npm run buildScripts && tsc -watch -p ./",
@@ -1582,8 +1581,6 @@
         "vsce": "^1.88.0",
         "vscode-nls-dev": "^3.3.1",
         "vscode-test": "^1.4.0",
-        "vue-loader": "^15.9.6",
-        "vue-template-compiler": "^2.6.12",
         "webpack": "^5.36.2",
         "webpack-cli": "^3.3.10"
     },
