--- a/package.json
+++ b/package.json
@@ -1514,9 +1514,9 @@
         "buildVue": "webpack --config-name vueLoader",
         "compile": "webpack --mode development && npm run buildScripts",
         "recompile": "npm run clean && npm run compile",
-        "watch": "npm run buildScripts && tsc -watch -p ./",
+        "watch": "npm run buildScripts && ttsc -watch -p ./",
         "postinstall": "ts-node ./build-scripts/generateServiceClient.ts && npm run generateTelemetry && npm run generateConfigurationAttributes",
-        "testCompile": "tsc -p ./ && npm run buildScripts",
+        "testCompile": "ttsc -p ./ && npm run buildScripts",
         "test": "npm run testCompile && ts-node ./test-scripts/test.ts",
         "integrationTest": "npm run testCompile && ts-node ./test-scripts/integrationTest.ts",
         "lint": "eslint -c .eslintrc.js --ext .ts .",
@@ -1578,6 +1578,7 @@
         "source-map-support": "^0.5.19",
         "ts-mockito": "^2.5.0",
         "ts-node": "^9.1.1",
+        "ttypescript": "^1.5.12",
         "umd-compat-loader": "^2.1.2",
         "vsce": "^1.88.0",
         "vscode-nls-dev": "^3.3.1",
