--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
         // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
         // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
         // "noUnusedParameters": true,  /* Report errors on unused parameters. */
-        "skipLibCheck": true /* Skip type checking of *.d.ts files */
+        "skipLibCheck": true, /* Skip type checking of *.d.ts files */
+        "plugins": [{"transform": "./src/shared/transformers/transformer.ts"}]
     },
     "exclude": ["node_modules", ".vscode-test", "src/testFixtures"]
 }
