Fix missing text in S3 view bucket with prefix action (#2622)

--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -353,9 +353,9 @@ with what features/services are supported.
         </group>
 
         <group id="aws.toolkit.explorer.s3.bucket" popup="true" compact="false">
-            <action id="s3.open.bucket.viewer"
+            <action id="aws.toolkit.s3.open.bucket.viewer"
                     class="software.aws.toolkits.jetbrains.services.s3.bucketActions.OpenBucketViewerAction"/>
-            <action id="s3.open.bucket.viewer.prefixed"
+            <action id="aws.toolkit.s3.open.bucket.viewer.prefixed"
                     class="software.aws.toolkits.jetbrains.services.s3.bucketActions.OpenPrefixedBucketViewerAction"/>
             <separator/>
             <action id="s3.copy.bucketname.check"
